PROJECT(encrypter CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
CONAN_BASIC_SETUP()

ADD_LIBRARY(${CMAKE_PROJECT_NAME} encrypter.cpp)
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${CONAN_LIBS})

INSTALL(TARGETS ${CMAKE_PROJECT_NAME}
        DESTINATION lib)
